2011-12-07  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New character functions registered.

	* lib.c (c_num): Generalized to convert characters to numbers also.
	This allows functions like gt and lt to work with characters.
	(chr_isalnum, chr_isalpha, chr_isascii, chr_iscntrl, chr_isdigit,
	chr_isgraph, chr_islower, chr_isprint, chr_ispunct, chr_isspace,
	chr_isupper, chr_isxdigit): New functions added.

	* lib.h: (chr_isalnum, chr_isalpha, chr_isascii, chr_iscntrl,
	* chr_isdigit, chr_isgraph, chr_islower, chr_isprint, chr_ispunct,
	* chr_isspace, chr_isupper, chr_isxdigit): New functions declared.
	(c_true): New macro.

2011-12-07  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (progn_s): New symbol variable.
	(op_progn): New static function.
	(eval_init): Initialize new variable, register progn operator.

	* txr.1: progn documented.

2011-12-06  Kaz Kylheku  <kaz@kylheku.com>

	Version 046

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2011-12-06  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (find_char): New function.
	(string_in_get_line): Following up TODO. Fixed broken
	function. Now get_line on a string stream properly returns characters
	up to and not including the next newlne character, and also consumes
	the newline character. Other cases are handled properly, also:
	the stream being at EOF already, or at the last line not being
	newline-terminated.

2011-12-06  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_unwind_protect): Fixed uninitialized variable
	warning.
	(eval_init): New functions registered: typeof and vector functions,
	as well as length_list.

	* lib.c (length): Function renamed to length_list, because it is
	list specific.
	(length_vec, size_vec, vector_list): New functions.
	(length): New function, generic over lists, vectors and strings.

	* lib.h (length_list, length_vec, size_vec, vector_list): Declared. 
