@@ -1,5 +1,10 @@
 2011-12-07  Kaz Kylheku  <kaz@kylheku.com>
 
+	* parser.l: In the CHRLIT state, return a nonblank character as an
+	IDENT token. This allows for character literals like #\$.
+
+2011-12-07  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (eval_init): New character functions registered.
 
 	* lib.c (c_num): Generalized to convert characters to numbers also.
